--- a/src/app.css
+++ b/src/app.css
@@ -1,27 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
-
-* {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap'); * {
     box-sizing: border-box;
     outline: none;
 }
 
 body {
-    background-color: azure;
+    background: linear-gradient(#505, #303, #505);
+    height: 100vh;
+    backdrop-filter: blur(20px);
     font-family: 'Times New Roman', Times, serif;
     display: flex;
     flex-wrap: wrap;
     margin: 0;
-    padding-top: 3rem;
+    padding-top: 3em;
+    justify-content: center;
 }
 
 .add {
     position: fixed;
     top: 1rem;
     right: 1rem;
-    background-color: bisque;
-    color: #000;
-    border: none;
-    border-radius: 3px;
     padding: 0.5rem 1rem;
     cursor: pointer;
 }
@@ -71,4 +68,29 @@ body {
 
 .hidden {
     display: none;
+}
+
+button {
+    background-color: #fca;
+    color: #035;
+    border: 3px solid #964;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: #fdb;
+    border: 3px solid #753;
+    color: #000;
+    border-radius: 10px;
+}
+
+i {
+    transition: 0.3s;
+}
+
+.delete:hover i, .edit:hover i {
+    color: #abc
 }
